// visualization: https://dbdiagram.io/d
// docs: https://dbml.dbdiagram.io/docs

Table Users {
  Id bigint 
  Username varchar(127) 
  Description text
  Email varchar
  PasswordHash char(60) // idk the length, depends on hash
  Role byte // enum, TBD
}


Table Items {
  Id bigint
  Name varchar(32)
  Description varchar(MAX)
  Image varchar(MAX) // ?
  Value decimal(18,2) // approx. monetary value
  OwnerId bigint 
  Tags varchar(MAX) // json array? use pivot table? idk
  Condition varchar // enum, TBD
  Availability varchar // enum, TBD
}

Ref: Items.OwnerId > Users.Id


Table Trades {
  Id bigint
  CreatedAt datetime
  InitiatorId bigint
  RecieverId bigint // can be null
  Status byte // enum, TBD

  // --- meeting stuff ---
  //   Location string // ?
  //   MeetingTime datetime // ?
}

Ref: Trades.InitiatorId > Users.Id
Ref: Trades.RecieverId > Users.Id


Table TradeItems {
  TradeId bigint
  ItemId bigint
}

Ref: TradeItems.TradeId > Trades.Id
Ref: TradeItems.ItemId > Items.Id


Table Offers {
  Id bigint
  UserId bigint
  TradeId bigint
  CreatedAt datetime
}

Ref: Offers.UserId > Users.Id
Ref: Offers.TradeId > Trades.Id


Table OfferItems {
  OfferId bigint
  ItemId bigint
}

Ref: OfferItems.OfferId > Offers.Id
Ref: OfferItems.ItemId > Items.Id


// Table Messages {
//   Id bigint // snowflake id?
//   SenderId bigint
//   TradeId bigint
//   Content string
// }

// Ref: Messages.SenderId > Users.Id
// Ref: Messages.TradeId > Trades.Id
